--- a/resource.html
+++ b/resource.html
@@ -32,26 +32,28 @@
                         <p class="loading-text">LOADING...</p>
                 </div>
         </div>
-        <header class="custom-header">
-                <div class="header-container">
-                        <a class="logo-link" href="index.html">
-                                <img src="img/logo.png" alt="Logo" class="header-logo">
-                        </a>
+  
+<header class="custom-header">
+    <div class="header-container">
+        <a class="logo-link" href="index.html">
+            <img src="img/logo.png" alt="Logo" class="header-logo">
+        </a>
 
-                        <div class="menu-toggle" id="mobile-menu">
-                                <span class="bar"></span>
-                                <span class="bar"></span>
-                        </div>
+        <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
 
-                        <nav class="nav-links">
-                                <a href="introduction.html" class="nav-item-link">INTRODUCTION</a>
-                                <a href="character.html" class="nav-item-link">CHARACTER</a>
-                                <a href="resource.html" class="nav-item-link">RESOURCE</a>
-                                <a href="pla.html" class="nav-item-link">PLATFORM</a>
-                        </nav>
-                </div>
-                <div class="line"></div>
-        </header>
+        <nav class="nav-links">
+            <a href="introduction.html" class="nav-item-link">INTRODUCTION</a>
+            <a href="character.html" class="nav-item-link">CHARACTER</a>
+            <a href="resource.html" class="nav-item-link">RESOURCE</a>
+            <a href="pla.html" class="nav-item-link">PLATFORM</a>
+        </nav>
+    </div>
+    <div class="line"></div>
+</header>
+
         <div id="manga-overlay"></div>
 
         <div id="anime-detail-portal" class="anime-detail-card">
@@ -119,7 +121,21 @@
         <script src="js/anime.js"></script>
         <script src="js/manga.js"></script>
         <script src="js\loading.js"></script>
+        
+<script>
+    // 確保網頁載入後才執行
+    document.addEventListener('DOMContentLoaded', function() {
+        const menu = document.querySelector('#mobile-menu');
+        const nav = document.querySelector('.nav-links');
 
+        if (menu) {
+            menu.onclick = function() {
+                menu.classList.toggle('active');
+                nav.classList.toggle('show');
+            };
+        }
+    });
+</script>
 </body>
 
 </html>
