--- a/detail.html
+++ b/detail.html
@@ -102,9 +102,9 @@
 
     </div>
 
-
+<div class="content-line" style="width: 80%;"></div>
         <footer class="container footer">
-                <div class="content-line"></div>
+                
                 <div class="footer-content">
                         <div class="footer-left-group">
                                 <div class="footer-info">
