--- a/pla.html
+++ b/pla.html
@@ -91,9 +91,9 @@
             </div>
         </div>
     </div>
-
+<div class="content-line" style="width: 80%;"></div>
     <footer class="container footer">
-        <div class="line"></div>
+        
         <div class="footer-content">
             <div class="footer-left-group">
                 <div class="footer-info">
